--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -82,7 +82,8 @@ Event Entry Form
                             </div>
                         </div><br>
                         <div class="row">  
-                            <div class="col-md-8">  
+                            <div class="col-md-8">
+                                <button type="button" id="delete_button" class="btn btn-warning btn-block">Delete Event</button>
                                 {{ form_end(form) }}
                             </div>
                         </div>
