--- a/app/Resources/views/eventForm.html.twig
+++ b/app/Resources/views/eventForm.html.twig
@@ -84,7 +84,7 @@ Event Entry Form
                         <div class="row">  
                             <div class="col-md-8">
                                 {{ form_end(form) }}
-                                <button type="button" id="delete_button" class="btn btn-warning btn-block" onClick="location.href='{{ path('delete_event', {'deleteId': event.id}) }}'">Delete Event {{ event.id }}</button>
+                                <button type="button" id="delete_button" class="btn btn-warning btn-block" onClick="location.href='{{ path('delete_event', {'deleteId': event.id}) }}'">Delete Event</button>
                             </div>
                         </div>
                     </div>
