--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -1,7 +1,7 @@
 <div class="wrapper">
     <div class="row">
         <div class="col-md-12">
-            <h4>Log Entry</h4>
+            <h2>Log Entry</h2>
         </div>
     </div>
     <div class="row">
@@ -11,18 +11,16 @@
                 <div class="row">
                     <div class="col-md-6">
                         <div class="form-group">
-                            {{ form_label(log_entry.operator) }} 
-                            {{ form_errors(log_entry.operator) }}
-                            {{ form_widget(log_entry.operator) }}
+                            {{ form_label(log_entry.operator) }}
+                            <br>
+                            {{ entry.operator }}
                         </div>
                     </div>
                     <div class="col-md-6">    
                         <div class="form-group">
                             {{ form_label(log_entry.log_entry_open_time) }}
-                            {{ form_errors(log_entry.log_entry_open_time) }}
-                            <div class='input-group date' id='datetimepicker1'>
-                                {{ form_widget(log_entry.log_entry_open_time) }}
-                            </div>
+                            <br>
+                            {{ entry.log_entry_open_time}}
                         </div>         
                     </div>
                 </div>
@@ -30,8 +28,8 @@
                     <div class="col-md-12">  
                         <div class="form-group">
                             {{ form_label(log_entry.log_blurb) }}
-                            {{ form_errors(log_entry.log_blurb) }}
-                            {{ form_widget(log_entry.log_blurb) }}
+                            <br>
+                            {{ entry.log_blurb }}
                         </div>
                     </div>
                 </div>
