pdf entry debugging

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -25,6 +25,8 @@
                     Short Description:
                     <br>
                     {{ entry.log_blurb }}
+                    <br>
+                    {{ entry }}
                 </div>
             </div>
             <div class="row">
