--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -13,7 +13,7 @@
                     Operator: {{ entry.operator }}
                 </div>
                 <div class="col-md-6">
-                    Log Open Time (Timestamp): {{ entry.log_entry_open_time }} ({{ entry.log_timestamp }})
+                    Log Open Time (Timestamp): {{ entry.log_entry_open_time|date('Y-m-d H:i:s', "Europe/London") }} ({{ entry.log_timestamp|date('Y-m-d H:i:s', "Europe/London") }})
                 </div>
             </div>
             <div class="row">
