pdf entry debugging

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -18,7 +18,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    Short Description: {{ entry.log_blurb|convert_encoding('UTF-8', 'ISO-8859-1') }}
+                    Short Description: {{ entry.log_blurb }}
                 </div>
             </div>
             <div class="row">
