--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -28,7 +28,7 @@
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    Reported By: {{ entry.reported_by }}
+                    Reported By: {{ entry.reportedBy }}
                 </div>
             </div>
             <div class="row">
