--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -2,7 +2,7 @@
     <div class="row">
         <div class="col-md-12">
             <h1>Log Entry(ID: {{ entry.id }})</h1>
-            Event: {{ activeEventName() }}
+            Event: {{ activeEventName() }} <br>
             Report Produced: {{ "now"|date('Y-m-d H:i:s', "Europe/London") }}
         </div>
     </div>
@@ -33,15 +33,18 @@
                     Reported By: {{ entry.reportedBy }}
                 </div>
             </div>
-            <div class="row">
-                <div class="col-md-6">
-                </div>
-                <div class="col-md-6">
-                </div>
-            </div>
             <br>
                 <div class="row" id="General">
-                    <h2>General</h2>
+                    <h2>General</h2><br>
+                    {% if general is null %}
+                        No General Info
+                    {% else %}
+                        Description:<br>
+                        {{ general.generalDescription }}
+                        Closed:<br>
+                        {{ general.general_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
+                        <br>
+                    {% endif %}
                 </div>
                 <div class="row" id="Medical">
                     <h2>Medical</h2>
