pdf entry debug

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -40,7 +40,7 @@
                         No General Info
                     {% else %}
                         Description:<br>
-                        {{ general.generalDescription }}
+                        {{ general.general_description }}
                         Closed:<br>
                         {{ general.general_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
                         <br>
