--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -35,7 +35,7 @@
             </div>
             <br>
                 <div class="row" id="General">
-                    <h2>General</h2><br>
+                    <h2>General</h2>
                     {% if general is null %}
                         No General Info
                     {% else %}
