--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -12,25 +12,25 @@
             <br>
             <div class="row">
                 <div class="col-md-6">
-                    Operator: {{ entry.operator }}
+                    <strong>Operator:</strong> {{ entry.operator }}
                 </div>
                 <div class="col-md-6">
-                    Log Open Time (Timestamp): {{ entry.log_entry_open_time|date('Y-m-d H:i:s', "Europe/London") }} ({{ entry.log_timestamp|date('Y-m-d H:i:s', "Europe/London") }})
+                    <strong>Log Open Time (Timestamp):</strong> {{ entry.log_entry_open_time|date('Y-m-d H:i:s', "Europe/London") }} ({{ entry.log_timestamp|date('Y-m-d H:i:s', "Europe/London") }})
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    Short Description: {{ entry.logBlurb }}
+                    <strong>Short Description:</strong> {{ entry.logBlurb }}
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    Location: {{ entry.location }}
+                    <strong>Location:</strong> {{ entry.location }}
                 </div>
             </div>
             <div class="row">
                 <div class="col-md-12">
-                    Reported By: {{ entry.reportedBy }}
+                    <strong>Reported By:</strong> {{ entry.reportedBy }}
                 </div>
             </div>
             <br>
@@ -39,16 +39,37 @@
                     {% if general is null %}
                         No General Info
                     {% else %}
-                        Description:<br>
+                        <strong>Description:</strong><br>
                         {{ general.generalDescription }}
                         <br>
-                        Closed:<br>
-                        {{ general.general_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
+                        <strong>Closed:</strong> {{ general.general_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
                         <br>
                     {% endif %}
                 </div>
                 <div class="row" id="Medical">
                     <h2>Medical</h2>
+                    {% if medical is null %}
+                        No Medical Info
+                    {% else %}
+                        <strong>Injury Type:</strong> {{ medical.medical_reported_injury_type }}
+                        <br>
+                        <strong>Description:</strong>
+                        {{ medical.medicalDescription }}
+                        <br>
+                        <strong>Medical Response:</strong> {{ medical.medicalResponse }}
+                        <br>
+                        <strong>999 Required?:</strong> {{ medical.nine_nine_nine_required }}
+                        <br>
+                        <strong>Medical Treatment:</strong> {{ medical.medicalTreatment }}
+                        <br>
+                        <strong>Medical Resolution:</strong> {{ medical.medicalResolution }}
+                        <br>
+                        <strong>Notes:</strong>
+                        {{ medical.medicalNotes }}
+                        <br>
+                        <strong>Closed:</strong> {{ medical.medical_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
+                        <br>
+                    {% endif %}
                 </div>
                 <div class="row" id="Security">
                     <h2>Security</h2>
