edited security section of pdf entry

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -72,9 +72,9 @@
                     {% if security is null %}
                         No Security Info
                     {% else %}
-                        <strong>Security Log Type:</strong> {{ security.security_log_type }}
+                        <strong>Security Log Type:</strong> {{ security.securityLogType }}
                         <br>
-                        <strong>Security Incident Type:</strong> {{ security.security_incident_type }}
+                        <strong>Security Incident Type:</strong> {{ security.securityIncidentType }}
                         <br>
                         <strong>Description:</strong><br>
                         {{ security.securityDescription }}
