--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -48,7 +48,7 @@
                     {% if medical is null %}
                         No Medical Info
                     {% else %}
-                        <strong>Injury Type:</strong> {{ medical.medical_reported_injury_type }} - {{ medical.medicalReportedInjuryType }}
+                        <strong>Injury Type:</strong> {{ medical.medicalReportedInjuryType }}
                         <br>
                         <strong>Description:</strong><br>
                         {{ medical.medicalDescription }}
