--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -26,6 +26,8 @@ Events Settings
                                         <th>Logging Stop Date</td>
                                         <th>Active?</td>
                                         <th>Edit</td>
+                                        <th>Generate Report?</td>
+                                        <th>View Last Report?</td>
                                     </tr>
                                 </thead>
                                 <tbody>
@@ -43,6 +45,8 @@ Events Settings
                                                 {% endif %}
                                             </td>
                                             <td><a href="{{ path('edit_event', {'editId': event.id}) }}"><span class="glyphicon glyphicon-pencil" aria-hidden="true" aria-label="Edit"></span></a></td>
+                                            <td><a href="{{ path('event_entires', {'eventId': event.id}) }}"><span class="glyphicon glyphicon-refresh" aria-hidden="true" aria-label="Generate Report"></span></a></td>
+                                            <td><a href="{{ path('edit_event', {'editId': event.id}) }}"><span class="glyphicon glyphicon-open-file" aria-hidden="true" aria-label="Open Last Report"></span></a></td>
                                         </tr>
                                     {% endfor %}                           
                                 </tbody>
