Updated event list db query

--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -56,7 +56,7 @@ Events Settings
                                                 {% if event.event_report_filename %}
                                                     <a href="{{ path('edit_event', {'editId': event.id}) }}"><span class="glyphicon glyphicon-open-file" aria-hidden="true" aria-label="Open Last Report"></span></a>
                                                 {% else %}
-                                                    No report Available
+                                                    No report available
                                                 {% endif %}   
                                             </td>
                                         </tr>
