debugging pdf report date

--- a/app/Resources/views/eventList.html.twig
+++ b/app/Resources/views/eventList.html.twig
@@ -55,6 +55,9 @@ Events Settings
                                                     No report available
                                                 {% endif %}   
                                             </td>
+                                            <td>
+                                                No report Available
+                                            </td>
                                         </tr>
                                     {% endfor %}                           
                                 </tbody>
