debuging pdf date info

--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -4,7 +4,7 @@
             <h1>{{ event.name }} Event Control</h1>
             {{ event.client }}
             <h2>Log Entry (ID: {{ entry.id }})</h2>
-            <strong>Report Produced:</strong> {{ "now"|date('Y-m-d H:i:s', "Europe/London") }}
+            <strong>Report Produced:</strong> 
         </div>
     </div>
     <div class="row">
