--- a/app/Resources/views/pdfEntry.html.twig
+++ b/app/Resources/views/pdfEntry.html.twig
@@ -4,7 +4,7 @@
             <h1>{{ event.name }} Event Control</h1>
             {{ event.client }}
             <h2>Log Entry (ID: {{ entry.id }})</h2>
-            <strong>Report Produced:</strong> 
+            <strong>Report Produced:</strong> {{ "now"|date('Y-m-d H:i:s', "Europe/London") }}
         </div>
     </div>
     <div class="row">
@@ -15,7 +15,7 @@
                     <strong>Operator:</strong> {{ entry.operator }}
                 </div>
                 <div class="col-md-6">
-                    <strong>Log Open Time (Timestamp):</strong> {{ entry.I_do_not_exist|date('Y-m-d H:i:s', "Europe/London") }} ({{ entry.logTimestamp|date('Y-m-d H:i:s', "Europe/London") }})
+                    <strong>Log Open Time (Timestamp):</strong> {{ entry.logEntryOpenTime|date('Y-m-d H:i:s', "Europe/London")}} ({{ entry.logTimestamp|date('Y-m-d H:i:s', "Europe/London") }})
                 </div>
             </div>
             <div class="row">
@@ -41,7 +41,7 @@
                         <strong>Description:</strong><br>
                         {{ general.generalDescription }}
                         <br>
-                        <strong>Closed:</strong> {{ general.general_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
+                        <strong>Closed:</strong> {{ general.generalEntryClosedTime|date('Y-m-d H:i:s', "Europe/London") }}
                     {% endif %}
                 </div>
                 <div class="row" id="Medical">
@@ -65,7 +65,7 @@
                         <strong>Notes:</strong><br>
                         {{ medical.medicalNotes }}
                         <br>
-                        <strong>Closed:</strong> {{ medical.medical_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
+                        <strong>Closed:</strong> {{ medical.medicalEntryClosedTime|date('Y-m-d H:i:s', "Europe/London") }}
                     {% endif %}
                 </div>
                 <div class="row" id="Security">
@@ -86,7 +86,7 @@
                         <br>
                         <strong>Security Resolution:</strong> {{ security.securityResolution }}
                         <br>
-                        <strong>Closed:</strong> {{ security.security_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
+                        <strong>Closed:</strong> {{ security.securityEntryClosedTime|date('Y-m-d H:i:s', "Europe/London") }}
                     {% endif %}
                 </div>
                 <div class="row" id="Lost">
@@ -109,7 +109,7 @@
                         <strong>Resolution Description:</strong><br>
                         {{ lost.lost_property_resolution_description }}
                         <br>
-                        <strong>Closed:</strong> {{ lost.lost_property_entry_closed_time|date('Y-m-d H:i:s', "Europe/London") }}
+                        <strong>Closed:</strong> {{ lost.lostPropertyEntryClosedTime|date('Y-m-d H:i:s', "Europe/London") }}
                     {% endif %}
                 </div>                                
         </div>
